Service.yml
apiVersion: v1
kind: Service
metadata:
  name: budget-app-web
spec:
  selector:
    app: budget-app-web
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
